--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css'%}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/Sidebar.css'%}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/sidebar.css'%}">
     <!-- Bootstrap CSS -->
     {% block css %}
     {% endblock css %}
